# vlm-coockiecutter

./: .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  README.md  cookiecutter.json  setup.cfg  setup.py  tox-updated.ini  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: labeler.yaml  tests-updated.yaml  tests.yaml
hooks/: post_gen_project.py
tests/: test_bake_project.py
tests/unit/: test_bake_project.py  test_lint_baked_project.py  test_sanity.py
{{cookiecutter.project_folder}}/: .gitignore  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.md  manifest.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_folder}}/.github/: PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_folder}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.project_folder}}/.github/workflows/: labeler.yaml  tests-updated.yaml  tests.yaml
{{cookiecutter.project_folder}}/docs/: Dockerfile  conf.py  index.rst  reference.rst
{{cookiecutter.project_folder}}/spelling/: spelling.txt  spelling_sort.py
{{cookiecutter.project_folder}}/{{cookiecutter.package_name}}/: constants.py  plot_params.py
