[metadata]
name = vlm-cookiecutter
author = Vincent LE MEUR
author-email = vincenlemeur@gmail.com
home-page = https://github.com/vlemeur/vlm-coockiecutter
description = "Cookiecutter for Python projects"
long-description = file: README.md
long_description_content_type = text/markdown
license = PRIVATE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >= 3.8
test_suite = pytest

[options.extras_require]
tests =
    pytest>=6.0.0
    pytest-env>=0.6.2
    pytest-cookies>=0.6.1
    cookiecutter>=1.7.2
    pyyaml>=5.4.1
    sh>=1.14.2
    pre-commit>=2.10.0

dev =
    pre-commit>=2.10.0
    tox>=3.21.4

docs =
    sphinx>=4.0.3
    sphinx-autodoc-typehints>=1.12.0
    sphinx-rtd-theme>=0.5.2
    myst-parser>=0.15.1

# Serves as a source of truth for tox.ini linter dependencies
# Also used by safety to check all dependencies of the project for vulnerabilities
linters =
    bandit~=1.7.4
    black~=22.6.0
    isort~=5.10.1
    flake8~=4.0.1
    darglint~=1.8.1
    pylint~=2.14.4
    pyenchant~=3.2.2
    mypy~=0.910

# Serves as a source of truth for pyproject.toml and tox.ini build dependencies
# Also used by safety to check all dependencies of the project for vulnerabilities
build =
    wheel~=0.37.0
    setuptools~=59.2.0
    twine~=3.6.0

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = True

[flake8]
output-file=flake8_report.txt
ignore=TAE001,E303,E203,W503
max-line-length=120