[metadata]
name = {{ cookiecutter.package_name }}
author = {{ cookiecutter.author }}
author-email = {{ cookiecutter.email }}
home-page = {{ cookiecutter.repository_url }}
description = {{ cookiecutter.project_short_description }}
long-description = file: README.md
long_description_content_type = text/markdown
license = PRIVATE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >= 3.7
test_suite = pytest
install_requires =

[options.extras_require]
tests =
    pytest~=6.2.2
    pytest-env~=0.6.2
    pytest-cov~=2.11.1

dev =
    pre-commit~=2.10.0
    tox~=3.21.4

{%- if cookiecutter.data_analysis == "y" %}

notebooks =
    ipykernel~=5.5.0
    nb-black~=1.0.7

{%- endif %}

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = True

[flake8]
output-file=flake8_report.txt
ignore=TAE001,E303,E203,W503
max-line-length=120

# Darglint is a flake8 plugin to validate docstrings, but it can be configured individually from flake8
[darglint]
docstring_style = numpy
